2003-09-06  Theodore A. Roth  <troth@openavr.org>

	* NEWS: Add 'Current:' header.
	* configure.ac (AC_INIT): Add cvs back to version since we're
	back in dev cycle (post release).

2003-09-06  Theodore A. Roth  <troth@openavr.org>

	* AVRDUDE 4.2.0 has been released (cvs release tag is "release_4_2_0").

2003-09-06  Theodore A. Roth  <troth@openavr.org>

	* NEWS: Update for 4.2.0 release. Add note about read/write of fuses
	support for avr910.
	* configure.ac (AC_INIT): Set version to 4.2.0.

2003-09-05  Theodore A. Roth  <troth@openavr.org>
[Contributed by Jan-Hinnerk Reichert <jan-hinnerk_reichert@hamburg.de>]

	* avr.c (avr_read_byte): If pgm->read_byte method fails, retry with
	avr_read_byte_default.
	* avr.c (avr_write_byte): If pgm->write_byte method fails, retry with
	avr_write_byte_default.
	* avr910.c (avr910_cmd): Implement using universal command.

2003-09-04  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am: Change AM_CPPFLAGS to avrdude_CPPFLAGS.
	Define avrdude_CFLAGS.
	* configure.ac: Set ENABLE_WARNINGS to "-Wall" if using gcc.

2003-09-02  Eric B. Weddington <eric@ecentral.com>

	* doc/avrdude.texi: Add note about privileges needed to load 
	the giveio driver for Windows.

2003-08-29  Brian S. Dean  <bsd@bsdhome.com>

	* avrdude.1:
	* main.c:
	Perform an auto erase before programming if the flash memory is
	anywhere specified to be written by any of the -U requests.

	To remain backward compatible with previous versions, disable this
	feature if any of the old-style memory specification operations are
	specified (-i, -o).

	Implement the -D option to explicitly disable the auto erase default.

	Deprecate the old-style memory specification options (-f, -i, -I, -m,
	and -o) in favor of the new -U option which allows one to operate on
	multiple memories on a single command line.

2003-08-28  Eric B. Weddington  <eric@ecentral.com>

	* avr910.c:
	* fileio.c:
	* main.c:
	* stk500.c:
	More code cleanup to remove warnings.
